# taskade

./: .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  README.md  benchmark_results.html  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pdm.toml  pdm_build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: common.yaml  main.yaml  release.yaml
benchmark/: BenchmarkResults-cgraphlib.json  BenchmarkResults-pygraphlib.json  benchmark.py  benchmark.sh  visualize.py
cgraphlib/: index.html
development/: index.html
docs/: cgraphlib.md  index.md  license.md  quick_start.md
docs/development/: index.md
docs/usage/: advanced_usage.md  index.md
license/: index.html
quick_start/: index.html
reference/SUMMARY/: index.html
reference/taskade/: index.html
reference/taskade/_decorator/: index.html
reference/taskade/_exceptions/: index.html
reference/taskade/_execution/: index.html
reference/taskade/_types/: index.html
reference/taskade/cgraphlib/: index.html
search/: search_index.json
src/cgraphlib/: cgraphlib.c
src/syncra/: __init__.py  _decorator.py  _exceptions.py  _execution.py
src/tanto/: __init__.py  _base.py  _decorator.py  _exceptions.py  _execution.py
tests/: test_base.py  test_decorator.py  test_dict_creation.py  test_execution.py
usage/: index.html
usage/advanced_usage/: index.html
